--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Jason Loh",
   "license": "ISC",
   "dependencies": {
+    "co-views": "^2.1.0",
     "eslint": "^3.19.0",
     "koa": "^2.2.0"
   },
